--- a/SuperShop/appsettings.json
+++ b/SuperShop/appsettings.json
@@ -1,13 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Server=DESKTOP-LBJBJKI\\MSSQLSERVER22;Database=SupersShop;Trusted_Connection=True;MultipleActiveResultSets=True"
+    },
+
+    "Blob": {
+        "ConnectionString": "workstation id=SuperShopMLeite.mssql.somee.com;packet size=4096;user id=marianaleitt_SQLLogin_1;pwd=3xkwx5qijd;data source=SuperShopMLeite.mssql.somee.com;persist security info=False;initial catalog=SuperShopMLeite"
     }
 }
